--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "build": "tsc",
     "start:prod": "node ./dist/server.js",
     "start:dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "lint": "eslint --ext .ts src/",
+    "lint:fix": "eslint --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prettier": "prettier --ignore-path .gitignore --write \"./src/**/*.ts\"",
     "prettier:fix": "prettier --write src"
@@ -27,20 +27,22 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.20.0",
+    "@eslint/js": "^9.39.2",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
+    "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.0",
     "@types/validator": "^13.12.2",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
-    "eslint": "^9.20.1",
+    "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.0.1",
     "globals": "^15.15.0",
+    "jiti": "^2.6.1",
     "nodemon": "^3.1.9",
     "prettier": "^3.5.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.24.1"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.50.0"
   }
 }
