--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start:prod": "node ./dist/server.js",
     "start:dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
     "lint": "eslint --ext .ts src/",
-    "lint:fix": "eslint --fix",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint:fix": "eslint --fix --ext .ts src/",
     "prettier": "prettier --ignore-path .gitignore --write \"./src/**/*.ts\"",
     "prettier:fix": "prettier --write src"
   },
@@ -36,11 +35,11 @@
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
     "eslint": "^9.39.2",
-    "eslint-config-prettier": "^10.0.1",
+    "eslint-config-prettier": "^10.1.8",
     "globals": "^15.15.0",
     "jiti": "^2.6.1",
     "nodemon": "^3.1.9",
-    "prettier": "^3.5.1",
+    "prettier": "^3.7.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.50.0"
