--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.21.2",
     "http-status": "^2.1.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.10.1",
     "validator": "^13.15.26",
     "zod": "^3.25.76"
@@ -32,6 +33,7 @@
     "@types/cors": "^2.8.17",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/validator": "^13.15.10",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
